--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
     <meta name="description" content="Plataforma universitaria para la gestión integral de becas alimentarias con interfaces para administradores y estudiantes" />
     <meta name="author" content="Universidad" />
     <meta name="keywords" content="universidad, becas, alimentarias, estudiantes, administración, wallet, gestión" />
+    
+    <!-- Favicon UDD -->
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <link rel="shortcut icon" href="/favicon.svg" type="image/svg+xml" />
 
     <meta property="og:title" content="UniBecas - Sistema de Gestión de Becas Alimentarias" />
     <meta property="og:description" content="Plataforma universitaria para la gestión integral de becas alimentarias" />
