--- a/index.html
+++ b/index.html
@@ -9,8 +9,9 @@
     <meta name="keywords" content="universidad, becas, alimentarias, estudiantes, administración, wallet, gestión" />
     
     <!-- Favicon UDD -->
-    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-    <link rel="shortcut icon" href="/favicon.svg" type="image/svg+xml" />
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg?v=2" />
+    <link rel="shortcut icon" href="/favicon.svg?v=2" type="image/svg+xml" />
+    <link rel="apple-touch-icon" href="/favicon.svg" />
 
     <meta property="og:title" content="UniBecas - Sistema de Gestión de Becas Alimentarias" />
     <meta property="og:description" content="Plataforma universitaria para la gestión integral de becas alimentarias" />
